# esp32c6-probe-rs-demo

./: Cargo.toml  Embed.toml
.cargo/: config.toml
src/: main.rs
