[package]
name = "probe-rs-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
defmt = "0.3.5"
esp-backtrace = { version = "0.9.0", default-features = false, features = ["esp32c6", "print-rtt", "panic-handler", "exception-handler"] }
esp-println = { version = "0.7.1", default-features = false, features = ["esp32c6", "critical-section", "rtt", "defmt-raw"] }
esp32c6-hal = "0.6.0"
nb = "1.1.0"
